<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fear Alert</string>
    <string name="action_settings">Settings</string>
    
    <string name="phone_description">Press here to start.</string>
    <string name="progress_text">Obtaining location...</string>
    <string name="no_contacts">No Contacts</string>
    <string name="no_contacts_description">No contacts.</string>
    
    <string name="name_hint">Name</string>
    <string name="number_hint">Number</string>
    <string name="sms_hint">SMS text</string>
    <string name="call"> Call</string>
    <string name="sms"> Message</string>
    <string name="send_location"> Append location</string>
    <string name="location_text"> + location</string>
    
    <string name="icon_description">Call or message this contact.</string>
    
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>

</resources>
