<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:background="@color/dark_background">
	<LinearLayout
	    android:layout_width="match_parent"
		android:layout_height="wrap_content"
	    android:orientation="vertical" >
	    
	  	<AutoCompleteTextView
	        android:id="@+id/name"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="20dp"
	        android:layout_marginLeft="20dp"
	        android:layout_marginRight="20dp"
	        android:layout_marginBottom="10dp"
	        android:textSize="35sp"
	        android:inputType="textPersonName"
	        android:imeOptions="actionNext"
	        android:hint="@string/name_hint"
	        android:completionThreshold="1" />
	  	
	    <EditText
	        android:id="@+id/number"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="20dp"
	        android:layout_marginRight="20dp"
	        android:layout_marginBottom="10dp"
	        android:textSize="35sp"
	        android:inputType="number"
	        android:hint="@string/number_hint" />
	    
	    <CheckBox
	        android:id="@+id/call"
	        android:text="@string/call"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="20dp"
	        android:layout_marginRight="20dp"
	        android:layout_marginBottom="10dp"
	        android:textSize="35sp"
	        android:textColor="@color/green" />
		
	    <CheckBox
	        android:id="@+id/sms"
	        android:text="@string/sms"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="20dip"
	        android:layout_marginRight="20dip"
	        android:layout_marginBottom="10dip"
	        android:textSize="35sp"
	        android:textColor="@color/light_blue" />
	    
	    <RelativeLayout
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_marginBottom="10dp"
	        android:layout_marginLeft="20dp"
		    android:layout_marginRight="20dp" >
	        
		    <EditText 
		        android:id="@+id/sms_content"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:textSize="35sp"
		        android:layout_alignParentLeft="true"
		        android:layout_toLeftOf="@+id/location_text"
		        android:inputType="textShortMessage"
		        android:hint="@string/sms_hint"/>
		    
		    <TextView 
		        android:id="@+id/location_text"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentRight="true"
		        android:text="@string/location_text"
		        android:textColor="@color/orange"
		        android:textSize="35sp"
		        android:visibility="gone" />
	    </RelativeLayout>
	    
	    <CheckBox
	        android:id="@+id/send_location"
	        android:text="@string/send_location"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="20dp"
	        android:layout_marginRight="20dp"
	        android:textSize="35sp"
	        android:textColor="@color/yellow" />   
	</LinearLayout>
</ScrollView>
